<resources>
    <string name="app_name">Note Application</string>
    <string name="main_activity_test_content">Main Activity</string>
    <string name="login_activity">Login Activity!</string>
    <string name="user_name_edittext">نام کاربری</string>
    <string name="password_edittext">رمز عبور</string>
    <string name="enter_button">ثبت نام</string>
    <string name="note_lines_login_image">Note lines</string>
    <string name="login_toast_message">لطفا تمامی مقادیر را پر کنید</string>
    <string name="note_title_recycler_layout">عنوان یادداشت</string>
    <string name="note_explain_recycler_layout">توضیحات</string>
    <string name="title_add_note">عنوان یادداشت</string>
    <string name="explain_add_note">شرح یادداشت</string>
    <string name="add_notes_text_view">یادداشت جدید</string>
    <string name="save_add_notes_button">ذخیره</string>
</resources>