<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#f4e3d2">

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:background="@drawable/edittext_login_shape"
        android:hint="@string/user_name_edittext"
        android:textColorHint="#C39079"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_login_shape"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_edittext"
        android:textColorHint="#C39079"
        android:inputType="numberPassword"
        android:paddingVertical="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
        app:layout_constraintStart_toStartOf="@+id/userNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/button_enter_shape"
        android:text="@string/enter_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#f8ece0"
        app:cardCornerRadius="16dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toTopOf="@+id/userNameEditText"
        app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
        app:layout_constraintStart_toStartOf="@+id/userNameEditText" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/round_notes_image"
            android:contentDescription="@string/note_lines_login_image" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>